# cuda-template

./: CMakeLists.txt  README.md
MainProject/: CMakeLists.txt
SomeCudaLib/: CMakeLists.txt
SomeCudaLib/src/: init.cu
